<resources>
    <string name="app_name">TeachR</string>
    <string name="google_maps_key">AIzaSyAvHwMXGx06mGfWTn5hWDyNLVFlX-rZtrg</string>


    <string name="placeholder_username">Identifiant</string>
    <string name="placeholder_password">Mot de passe</string>
    <string name="placeholder_password_repeat">Confirmer mdp</string>
    <string name="placeholder_firstname">Prénom</string>
    <string name="placeholder_lastname">Nom</string>
    <string name="placeholder_address">Adresse</string>
    <string name="placeholder_email_forgotten_password">Entrez votre e-mail</string>
    <string name="forgotten_password_dialog_title">Mot de passe oublié</string>
    <string name="forgotten_password_dialog_confirm_button">Réinitialiser</string>
    <string name="forgotten_password_dialog_message">Réinitialisation de votre mdp...</string>
    <string name="forgotten_password_dialog_error_message">Erreur lors de la réinitialisation de votre mdp</string>
    <string name="backpress_to_leave_message">Appuyer sur retour une deuxième fois pour quitter</string>

    <string name="login_button">Connexion</string>
    <string name="signup_button">S\'inscrire</string>
    <string name="forgotten_password">Mot de passe oublié</string>
    <string name="createEntry_button">Proposer le cours</string>

    <string name="cancel_button">Annuler</string>

    <string name="authentication_success">Authentification réussie</string>
    <string name="authentication_failure">Erreur d\'authentification</string>
    <string name="enter_details_error">Veuillez entrer vos informations</string>
    <string name="verification_message_sent">Un e-mail de vérification a été envoyé à votre messagerie</string>
    <string name="forgotten_password_message_sent">Un e-mail de réinitialisation a été envoyé à votre messagerie</string>
    <string name="signup_failed">Erreur lors de l\'inscription</string>
    <string name="passwords_mismatch">Les mots de passe entrés ne sont pas identiques</string>
    <string name="password_too_short">Veuillez entrer un mot de passe contenant plus de 6 caractères</string>

    <string name="matiere">Matière</string>
    <string name="date">Date</string>
    <string name="duration">Durée</string>
    <string name="address">Adresse</string>
    <string name="price">Prix</string>
    <string name="name">Nom</string>

    <string name="filter">Filtrer</string>

    <string name="or">ou</string>
    <string name="title_activity_last_step_offer">LastStepOfferActivity</string>

    <string name="placeholder_matiere">Matière</string>
    <string name="placeholder_price">Prix</string>
    <string name="placeholder_adress">Adresse</string>
    <string name="placeholder_duration">Durée</string>
    <string name="title_activity_adress_offer">AdressOfferActivity</string>
    <string name="title_activity_duration_offer">durationOfferActivity</string>
    <string name="next">Suivant</string>
    <string name="validate">Valider</string>
    <string name="stepOne">Étape 1/5</string>
    <string name="stepTwo">Étape 2/5</string>
    <string name="stepThree">Étape 3/5</string>
    <string name="stepFor">Étape 4/5</string>
    <string name="stepFive">Étape 5/5</string>
    <string name="lastStep">Récapitulatif de votre demande</string>
    <string name="courseSubject">Indiquez le sujet du cours :</string>
    <string name="courseAddress">Indiquez l\'adresse du cours :</string>
    <string name="coursePrice">Indiquez le prix du cours : </string>
    <string name="courseDuration">Indiquez la durée du cours : </string>
    <string name="courseDate">Indiquez la date du cours : </string>


    <string name="student">Étudiant</string>
    <string name="teacher">Enseignant</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_entry_list">Entries</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_date_offer">activity_date_offer</string>
</resources>
