<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/secondary_button">

    <TextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/matiere"
        android:textColor="@color/bold"
        android:textSize="26dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:gravity="center_vertical"
        android:text="@string/price"
        android:textColor="@color/bold"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course"
        android:gravity="center_vertical"
        android:text="@string/date"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_alignTop="@+id/date"
        android:layout_toEndOf="@+id/date"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:text="@string/duration"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration"
        android:gravity="center_vertical"
        android:text="@string/address"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"/>

    <com.teachr.teachr.CircularImageView
        android:id="@+id/avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/address"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/avatar"
        android:layout_below="@id/address"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>