<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/entry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:background="@drawable/secondary_button">

        <TextView
            android:id="@+id/course"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:gravity="center_vertical"
            android:text="@string/matiere"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/bold"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/course"
            android:layout_toEndOf="@+id/course"
            android:gravity="right"
            android:paddingStart="40dp"
            android:layout_marginRight="5dp"
            android:text="@string/price"
            android:textColor="@color/bold"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/name"
            android:layout_below="@+id/price"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_below="@id/hour"
            android:layout_alignLeft="@+id/date"
            android:gravity="right"
            android:text="@string/duration"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/avatar"
            android:layout_below="@id/course"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="@+id/avatar"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.teachr.teachr.CircularImageView
            android:id="@+id/avatar"
            android:layout_width="95dp"
            android:layout_height="107dp"
            android:layout_below="@id/course"
            android:width="1dp"
            android:height="1dp"
            android:layout_marginLeft="5dp"
            android:paddingBottom="10dp"
            android:background="@mipmap/teachr_logo_rounded"
            android:maxWidth="1dp"
            android:maxHeight="1dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/address"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

</RelativeLayout>