<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:text="@string/forgotten_password_dialog_title" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:hint="@string/placeholder_email_forgotten_password"
        android:textAlignment="center"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/confirmButton"
        android:background="@android:drawable/ic_menu_revert"
        android:maxWidth="70dp"
        android:minWidth="70dp"
        android:maxHeight="50dp"
        android:minHeight="50dp"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/emailEditText"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/primary_button"
        android:textColor="@color/white"
        android:maxWidth="180dp"
        android:minWidth="180dp"
        android:text="@string/forgotten_password_dialog_confirm_button" />

</RelativeLayout>