<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LastStepOfferActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/teachr_logo_extended" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/titleString"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/lastStep" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/matiere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matiere"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="10dp"
                android:textColor="@color/bold" />

            <TextView
                android:id="@+id/matiere1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matiere"
                android:layout_toEndOf="@+id/matiere"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/matiere"
                android:text="@string/address"
                android:textColor="@color/bold" />

            <TextView
                android:id="@+id/address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/matiere"
                android:text="@string/address"
                android:layout_toEndOf="@+id/address"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/address"
                android:text="@string/price"
                android:textColor="@color/bold" />

            <TextView
                android:id="@+id/price1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/address"
                android:layout_toEndOf="@+id/price"
                android:text="@string/price"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/price"
                android:layout_centerHorizontal="true"
                android:text="@string/duration"
                android:textColor="@color/bold" />

            <TextView
                android:id="@+id/duration1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_toEndOf="@+id/duration"
                android:layout_centerHorizontal="true"
                android:text="@string/duration"
                android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/footer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/primary_button"
        android:text="@string/validate" />

</RelativeLayout>