<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/teachr_logo_extended" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/identifierEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/placeholder_username"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/identifierEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:autofillHints="@string/placeholder_username"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:autofillHints="@string/placeholder_username"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordEditText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:autofillHints="@string/placeholder_username"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordEditText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:autofillHints="@string/placeholder_username"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordEditText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:autofillHints="@string/placeholder_username"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordEditText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:autofillHints="@string/placeholder_username"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>



    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/primary_button"
            android:maxWidth="180dp"
            android:minWidth="180dp"
            android:text="@string/signup_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/secondary_button"
            android:maxWidth="180dp"
            android:minWidth="180dp"
            android:text="@string/cancel_button"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</RelativeLayout>